# Tracelet

./: .cursorrules  .gitignore  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER-EXPERIENCE.md  MIGRATION_2.0.md  PERFORMANCE-AUDIT.md  PLAN-ENTERPRISE.md  PLAN-MISSING-FEATURES.md  PLAN-PERIODIC-MODE.md  PLAN-REACT-NATIVE.md  PLAN-SDK-EXTRACTION.md  PLAN.md  Package.swift  README.md  TraceletSDK.podspec  analysis_options.yaml  analyze_output.txt  bump_version.py  fix_docs.py  melos.yaml  pubspec.yaml  test_build.sh  test_script.kt  test_server.py  test_sqrt.kt
.github/: FUNDING.yml  dependabot.yml
algorithms/: adaptive_sampling_test_vectors.json  delta_encoding_test_vectors.json  geo_utils_test_vectors.json  geofence_evaluator_test_vectors.json  kalman_test_vectors.json  location_processor_test_vectors.json
benchmark/: benchmark_results.json  benchmark_table.md  pubspec.yaml  pubspec_overrides.yaml
example/: .gitignore  .metadata  README.md  pubspec.yaml  pubspec_overrides.yaml  test_motion.dart  test_server.dart  test_stream.dart  test_stream_2.dart
example_firebase/: .gitignore  .metadata  README.md  analysis_options.yaml  pubspec.yaml
example_supabase/: .metadata  example.dart  pubspec.yaml
help/: ADAPTIVE-SAMPLING.md  API.md  AUDIT-TRAIL.md  BACKGROUND-TRACKING.md  BATTERY-BUDGET.md  CARBON-ESTIMATOR.md  COMPLIANCE-REPORT.md  CONFIGURATION-PROFILES.md  CONFIGURATION.md  DATABASE-ENCRYPTION.md  FAQ.md  (+28 more)
sdk/rust-core/: Cargo.toml  build-android.sh  build-ios-utils.sh  build-ios.sh
sdk/rust-core/core/: Cargo.toml
sdk/rust-core/core/src/: error.rs  frb_generated.rs  lib.rs
sdk/rust-core/core/src/algorithms/: crash_model.rs  impact.rs  location_processor.rs  mod.rs  schedule_parser.rs  sensor_features.rs  telematics.rs  transport_mode.rs  trip_manager.rs
sdk/rust-core/core/src/api_dart/: battery_budget.rs  impact.rs  mod.rs  schedule.rs  smart_motion.rs  telematics.rs  transport_mode.rs  trip.rs
sdk/rust-core/core/src/config/: mod.rs
sdk/rust-core/core/src/crypto/: audit_trail.rs  mod.rs
sdk/rust-core/core/src/database/: mod.rs
sdk/rust-core/core/src/event_dispatcher/: mod.rs
sdk/rust-core/core/src/spatial/: geofence_evaluator.rs  mod.rs  privacy_zone.rs  rtree.rs
sdk/rust-core/core/src/state/: battery_budget.rs  engine_state.rs  mod.rs  smart_motion_coordinator.rs
sdk/rust-core/core/tests/: config_integration_test.rs
sdk/rust-core/src/: lib.rs  logger.rs
sdk/rust-core/src/algorithms/: geo_utils.rs  kalman.rs  location_processor.rs  mod.rs  schedule_parser.rs  trip_manager.rs
sdk/rust-core/src/api_dart/: battery_budget.rs  rtree.rs  schedule.rs  smart_motion.rs  trip.rs
sdk/rust-core/src/crypto/: audit_trail.rs  delta_encoder.rs
sdk/rust-core/src/database/: mod.rs
sdk/rust-core/src/event_dispatcher/: mod.rs
sdk/rust-core/src/network/: mod.rs
sdk/rust-core/src/spatial/: geofence_evaluator.rs  mod.rs  rtree.rs
sdk/rust-core/src/state/: battery_budget.rs  engine_state.rs  mod.rs  smart_motion_coordinator.rs
sdk/rust-core/sync/: Cargo.toml
sdk/rust-core/sync/src/: lib.rs
sdk/rust-core/sync/src/crypto/: mod.rs
sdk/rust-core/sync/src/database/: mod.rs
sdk/rust-core/sync/src/event_dispatcher/: mod.rs
sdk/rust-core/sync/src/network/: mod.rs
sdk/rust-core/tests/: kalman_test.rs
(+484 files in other folders)
