[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "tracelet_core"

[dependencies]
uniffi = { version = "0.31.1", features = ["cli"] }
geo = "0.28.0"
rstar = "0.12.0"
sha2 = "0.10.8"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.150"


