[package]
name = "tracelet_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "tracelet_core"

[dependencies]
uniffi = { version = "0.31.1", features = ["cli"] }
geo = "0.28.0"
rstar = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.133"
chrono = "0.4.44"
flutter_rust_bridge = "=2.12.0"
thiserror = "2.0.11"
log = "0.4.21"

[dev-dependencies]
criterion = "0.8.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
