[package]
name = "tracelet_sync"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "tracelet_sync"

[dependencies]
uniffi = { version = "0.31.1", features = ["cli"] }
tracelet_core = { path = "../core" }
rusqlite = { version = "0.31.0", features = ["bundled"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.37.0", features = ["full"] }
sha2 = "0.10.8"
hex = "0.4.3"
aes-gcm = "0.10.3"
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.133"
chrono = "0.4.44"
thiserror = "2.0.11"
